<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_home_step_2_title"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_home_step_2_question"
        android:id="@+id/textView2" />

    <Button
        android:id="@+id/btStep2MapView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_home_step_2_map_search_caption"
        android:drawableTop="@drawable/ic_search"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_home_step_2_or"
        android:id="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_home_step_2_form_fill_caption"
        android:id="@+id/textView5" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etNewHomeAddressNumber"
            android:hint="@string/new_home_step_2_address_number"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etNewHomeStreet"
            android:hint="@string/new_home_step_2_address_street"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etNewHomeWard"
            android:hint="@string/new_home_step_2_address_ward"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etNewHomeDistrict"
            android:hint="@string/new_home_step_2_address_district"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etNewHomeCity"
            android:hint="@string/new_home_step_2_address_city"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_home_button_next"
        android:id="@+id/btStep2Next"
        android:layout_gravity="center_horizontal" />


</LinearLayout>