<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_home_step_5_title"
        android:id="@+id/tvStep5Title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_home_step_5_question"
        android:id="@+id/tvStep5Question" />

    <Button
        android:id="@+id/btStep5Gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_home_step_5_gallery"
        android:drawableTop="@drawable/ic_gallery"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_home_button_next"
        android:id="@+id/btStep5Next"
         />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rvStep5Gallery"
        />

</LinearLayout>